--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "github/eglot"]
 	path = github/eglot
-	url = ssh://git@github.com/amosnier/eglot
-	branch = scratch/issue-173-robustify-fix
+	url = ssh://git@github.com/joaotavora/eglot
+	branch = master
